:tada: opts java.core.thread & classload